# Revision history for Perl extension Text::Darts.
#
# $Id: Changes,v 0.6 2009/03/30 12:57:33 dankogai Exp dankogai $
#
$Revision: 0.6 $ $Date: 2009/03/30 12:57:33 $
! Darts.xs lib/Text/Darts.pm
  More optimization

0.06 2009/03/30 12:57:33
! Darts.xs lib/Text/Darts.pm
  Optimized gsub($str, \%hashref);

0.05  2009/03/30 11:44:30
! Darts.xs lib/Text/Darts.pm
  gsub() now accepts hash reference, too.

0.04 2008/09/27 15:24:53
! Darts.xs
  fixed for Darts-0.32 (by NAOYA)
  Message-Id:	<20080927232111.3A0A.520E252C@hatena.ne.jp>
! lib/Text/Darts.pm
  Pod fixes

0.03 2007/12/23
! Makefile.pm
  s@intra/@dan.co.jp/

0.02 2007/12/23 16:32:49
! Darts.xs lib/Text/Darts.pm
  added $td->open();

0.01  Sun Dec 23 19:26:55 2007
	- original version; created by h2xs 1.23 with options
		-n Text::Darts
